--- a/examples/dummy/Makefile
+++ b/examples/dummy/Makefile
@@ -5,9 +5,12 @@ include $(P4EST_DIR)/etc/Makefile.p4est.mk
 P4EST_CXX = mpicxx
 
 TARGETS = dummy
-OBJECTS = dummymain.o dummytest.o
+OBJECTS = dummymain.o dummytest.o my_p4est_tools.o
 
 default: $(TARGETS)
+
+my_p4est_tools.o: ../../src/my_p4est_tools.c
+	$(P4EST_CC) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) -c $< -o $@
 
 .c.o:
 	$(P4EST_CC) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) -c $< -o $@
@@ -21,4 +24,7 @@ dummy: $(OBJECTS)
 clean:
 	rm -f *.o *.a $(OBJECTS) $(TARGETS)
 
-.PHONY: default clean
+realclean: clean
+	rm -f *vtu *.visit
+
+.PHONY: default clean realclean
