Updtaed the test function. It fails with the new lookup method. Reverting ...

--- a/examples/LevelSet/Makefile
+++ b/examples/LevelSet/Makefile
@@ -6,12 +6,13 @@ vpath %.cpp    $(HEAD_DIR)/src
 vpath %.c      $(HEAD_DIR)/src 
 INCLUDE_FLAGS += -I$(HEAD_DIR)
 SRCS           = utils.cpp my_p4est_vtk.cpp semi_lagrangian.cpp interpolating_function.cpp refine_coarsen.cpp
-SRCS          += main_semi_lagrangian.cpp
+SRCS          += main_test.cpp
+#SRCS          += main_semi_lagrangian.cpp
 #SRCS          += main_refine_coarsen.cpp
 CSRCS          = my_p4est_tools.c my_p4est_nodes.c
 BIN_NAME       = levelset
 CSRCS          = my_p4est_nodes.c my_p4est_tools.c
-BIN_NAME       = levelset
+BIN_NAME       = test
 BIN_FOLDER     = .
 
 # What build type to use? __MUST__ either be 'debug' or 'release'
