Ignoring MAC OSX files (.DS_Store)

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 *.visit
 *.cproject
 *.project
+.DS_Store
+._.DS_Store
 
 # What directories to ignore
 [Dd]ebug/
@@ -23,3 +25,4 @@
 [Oo]bjs/
 [Pp]roject[s]/
 [Bb]uild/
+
