--- a/Makefile.navierstokes
+++ b/Makefile.navierstokes
@@ -6,6 +6,14 @@ log = 0
 stampede = 0
 juqueen = 0
 
+# This Makefile requires the following environment variables:
+#
+# CASL_P4EST        Toplevel directory of source
+# P4EST_DIR         Where p4est is make installed
+# PETSC_INC         Header files of petsc
+# PETSC_LIB         The libpetsc.* files
+# VOROPP_DIR        Where libvoro++ is make installed
+
 # On JUQUEEN it is important to module load petsc/3.6.0_downloads_O3strict.
 #            It is also advised to compile p4est and export P4EST_DIR accordingly,
 #            since this provides the BGQ-specific compiler flags from the p4est build.
@@ -13,7 +21,7 @@ juqueen = 0
 
 # hack to pass NULL as first parameter to PetscOptionsSetValue if set to 1
 # to use the JUQUEEN petsc version 3.6 this must be 0
-petscoptions = 1
+petscoptions = 0
 
 ifeq ($(build), 2d)
 	OBJDIR = .obj_2d
@@ -25,6 +33,8 @@ endif
 
 # only set these variables if P4EST_DIR is not defined in the environment
 ifeq ($(origin P4EST_DIR), undefined)
+
+        # don't go here; define P4EST_DIR
 
 	CFLAGS_DEBUG = -g -O0
 	CFLAGS_OPTIM = -O2
@@ -66,8 +76,10 @@ endif
 ifeq ($(juqueen), 0)
 	#INCPATH += -I$(PETSC_DIR)/include -I$(PETSC_DIR)/sandybridge-cxx/include
 	#LIBS += -Wl,-rpath,$(PETSC_DIR)/sandybridge-cxx/lib -L$(PETSC_DIR)/sandybridge-cxx/lib -lpetsc
-	INCPATH += -I$(PETSC_DIR)/include
-	LIBS += -Wl,-rpath,$(PETSC_DIR)/lib -L$(PETSC_DIR)/lib -lpetsc
+	#INCPATH += -I$(PETSC_DIR)/include
+	#LIBS += -Wl,-rpath,$(PETSC_DIR)/lib -L$(PETSC_DIR)/lib -lpetsc
+	INCPATH += -I$(PETSC_INC)
+	LIBS += -L$(PETSC_LIB) -lpetsc
 else
 	include $(PETSC_DIR)/lib/petsc/conf/variables
 	include $(PETSC_DIR)/lib/petsc/conf/rules
@@ -77,20 +89,21 @@ endif
 
 # casl p4est
 ifeq ($(origin CASL_P4EST), undefined)
-	CASL_P4EST = /work/02673/guittet/code/casl_p4est
+        # don't go here; define CASL_P4EST
+	CASL_P4EST = /home/foobar/work/casl_p4est
 endif
 INCPATH += -I$(CASL_P4EST)
 
-# casl library -- it seems this is outdated and only referenced in 2D
-CASL_DIR =/work/02673/guittet/code/casl_library
+# casl library -- it seems this is outdated and only referenced in 2D (if even?)
+# CASL_DIR =/work/02673/guittet/code/casl_library
 
 # Voro++
 ifeq ($(origin VOROPP_DIR), undefined)
+        # don't go here; define VOROPP_DIR
 	LIBS += -L/work/02673/guittet/softwares/build/voro++/lib -lvoro++
 	INCPATH += -I/work/02673/guittet/softwares/build/voro++/include/voro++
 else
 	#echo "Use installed Voro++ library from $(VOROPP_DIR)"
-
 	LIBS += -L$(VOROPP_DIR)/lib -lvoro++
 	INCPATH += -I$(VOROPP_DIR)/include/voro++
 endif
@@ -238,11 +251,13 @@ $(OBJDIR)/%.o: %.c
 
 ####### Build rules
 
+.PHONY: all clean
+
 #all: $(SOURCES) $(TARGET)
 all: $(TARGET)
 
 $(TARGET):  $(OBJECTS)
 	$(LINK) -o $(TARGET) $(OBJECTS) $(LIBS) $(LFLAGS)
 
-#clean: 
-#	rm -rf $(OBJDIR)/*.o $(TARGET)
+clean: 
+	rm -rf $(OBJDIR)/*.o $(TARGET)
