My first commit:  Git ignore now ignores all *.pri files inside qmake/ except those important to configure the project in particular architectures.

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,17 @@ Info.plist
 *[Bb]uild*
 *[Xx]code*
 Default/
+.idea/
+CMakeLists.txt
+**/cmake-build-*
+
+# For QMake/ we ignore all *.pri files except some important ones.
+qmake/*.pri
+!qmake/common.pri
+!qmake/libparcasl.pri
+!qmake/linux.pri
+!qmake/macx.pri
+!qmake/stampede.pri
 
 *.orig
 *_BACKUP_*
