Modified .gitignore to match the one from develop branch.  It's now tracking my youngmin_laptop.pri.  CMakeLists.txt are still not being tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -49,12 +49,12 @@ CMakeLists.txt
 **/cmake-build-*
 
 # For QMake/ we ignore all *.pri files except some important ones.
-qmake/*.pri
-!qmake/common.pri
-!qmake/libparcasl.pri
-!qmake/linux.pri
-!qmake/macx.pri
-!qmake/stampede.pri
+# qmake/*.pri
+# !qmake/common.pri
+# !qmake/libparcasl.pri
+# !qmake/linux.pri
+# !qmake/macx.pri
+# !qmake/stampede.pri
 
 *.orig
 *_BACKUP_*
